plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.mockito:mockito-core' // 12.02 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // 12.02 추가
	implementation 'org.springframework.data:spring-data-redis' // 12.02 추가
	implementation 'com.auth0:java-jwt:4.4.0' // 12.02 추가
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.mockito:mockito-core' // 12.02 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // 12.02 추가
	implementation 'org.springframework.data:spring-data-redis' // 12.02 추가
	implementation 'com.auth0:java-jwt:4.4.0' // 12.02 추가
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0' // swagger 12.23
	implementation 'org.springframework.boot:spring-boot-starter-webflux' // 2월 8일 추가
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.436' // AWS s3 2월 28일
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	//runtimeOnly 'com.mysql:mysql-connector-j'
	// 01.21 runtimeOnly 대신 implementation 을 사용하여 MySQL 드라이버를 포함함
	implementation 'com.mysql:mysql-connector-j:8.0.33'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//WebSocket 관련
	implementation 'org.webjars:sockjs-client:1.1.2'
	implementation 'org.webjars:stomp-websocket:2.3.3-1'

	//objectMapper관련
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'


}

tasks.named('test') {
	useJUnitPlatform()
}

// 12.02 테스트 로그 확인
test {
	useJUnitPlatform()
	testLogging {
		events "PASSED", "FAILED", "SKIPPED"
		showStandardStreams = true
	}
}